samples/_failures_safe/1761532195_dfce80_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_816f8a65.c: In function ‘tokenize’:
./samples/SAFE/__tmp_816f8a65.c:163:27: error: expected ‘]’ at end of input
  163 |         tokens[token_count
      |                           ^
      |                           ]
./samples/SAFE/__tmp_816f8a65.c:163:9: error: expected declaration or statement at end of input
  163 |         tokens[token_count
      |         ^~~~~~
./samples/SAFE/__tmp_816f8a65.c:163:9: error: expected declaration or statement at end of input
